# compiler-principle-experiment

./: .gitignore  CMakeLists.txt  README.md
include/: exception.h  grammar_utils.h  lexical_analysis.h  ll1_analysis.h  ll1_grammar.h  ll1_programmer.h  operator_grammar.h  operator_programmer.h  structure_ll1.h
resource/: expression.txt  output.txt  test_output.txt  test_utils.txt  utils.txt  utils_output.txt
src/: CMakeLists.txt  lexical_analysis.cpp  ll1_programmer.cpp  operator_programmer.cpp
src/lexical_analysis/: CMakeLists.txt  lexical_analysis.cpp
src/ll1_analysis/: CMakeLists.txt  ll1_analysis.cpp
src/ll1_grammar/: CMakeLists.txt  ll1_grammar.cpp
src/operator_grammar/: CMakeLists.txt  operator_grammar.cpp
src/structure_ll1/: CMakeLists.txt  structure_ll1.cpp
